# Research-Paper-Organiser

./: README.md  pyproject.toml
src/rpo/: __main__.py  config.py  gui.py  rpo.py
